(refactor): update seeders to include permissions and roles